[package]
name = "sgx"
version = "0.1.0"
authors = ["Lily Sturmann <lsturman@redhat.com>", "Nathaniel McCallum <npmccallum@redhat.com>"]
license = "Apache-2.0"
edition = "2018"
homepage = "https://github.com/enarx/sgx"
repository = "https://github.com/enarx/sgx"
description = "Library for Intel SGX"
readme = "README.md"
keywords = ["intel", "sgx"]
categories = ["os", "os::linux-apis", "parsing", "network-programming", "hardware-support"]
exclude = [ ".gitignore", ".github/*" ]

[badges]
# See https://doc.rust-lang.org/cargo/reference/manifest.html#the-badges-section
github = { repository = "enarx/sgx", workflow = "test" }
#github = { repository = "enarx/sgx", workflow = "lint" }
maintenance = { status = "actively-developed" }
is-it-maintained-issue-resolution = { repository = "enarx/sgx" }
is-it-maintained-open-issues = { repository = "enarx/sgx" }

[features]
rcrypto = ["rand", "rsa", "sha2", "num-integer", "num-traits"]
std = []

[dependencies]
x86_64 = { version = "0.14.5", default-features = false }
xsave = { version = "1.0", default-features = false }
openssl = { version = "0.10", optional = true }
bitflags = "1.2"

# Used by the rcrypto feature (see above).
num-integer = { version = "0.1", optional = true }
num-traits = { version = "0.2", optional = true }
rand = { version = "0.8", optional = true }
sha2 = { version = "0.9", optional = true }
rsa = { version = "0.5", optional = true }

[dev-dependencies]
rstest = "0.11"
memoffset = "0.6.1"
