[package]
name = "sgx"
version = "0.6.0"
authors = ["The Enarx Project Developers"]
license = "Apache-2.0"
edition = "2021"
rust-version = "1.60"
homepage = "https://github.com/enarx/sgx"
repository = "https://github.com/enarx/sgx"
description = "Library for Intel SGX"
readme = "README.md"
keywords = ["intel", "sgx"]
categories = ["os", "os::linux-apis", "parsing", "network-programming", "hardware-support"]
exclude = [ ".gitignore", ".github/*" ]

[badges]
# See https://doc.rust-lang.org/cargo/reference/manifest.html#the-badges-section
github = { repository = "enarx/sgx", workflow = "test" }
#github = { repository = "enarx/sgx", workflow = "lint" }
maintenance = { status = "actively-developed" }
is-it-maintained-issue-resolution = { repository = "enarx/sgx" }
is-it-maintained-open-issues = { repository = "enarx/sgx" }

[features]
rcrypto = ["rand", "rsa", "sha2", "num-integer", "num-traits"]

[dependencies]
x86_64 = { version = "^0.14.6", default-features = false }
openssl = { version = "^0.10.36", optional = true }
bitflags = "^1.3.2"

# Used by the rcrypto feature (see above).
num-integer = { version = "^0.1.44", optional = true }
num-traits = { version = "^0.2.14", optional = true }
rand = { version = "^0.8.4", optional = true }
sha2 = { version = "0.10.2", features = ["oid"], optional = true }
rsa = { version = "^0.7.1", optional = true }

[target.'cfg(target_arch = "x86_64")'.dependencies]
xsave = { version = "^2.0.0", default-features = false }

[dev-dependencies]
testaso = "0.1"
